--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <body>
 
 <div id="connections-graph-container">
-  <button class="toggle-physics-button">Toggle Physics</button>
+  <button class="toggle-physics-button">Push Buitton</button>
   <div id="connections-graph"></div>
 </div>
 
