--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       border: 1px solid #333;
       border-radius: 8px;
       overflow: hidden;
+       transform: translateY(-100px); /* Moves the graph up by 100px */
     }
 
     .toggle-physics-button {
