--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       border: 1px solid #333;
       border-radius: 8px;
       overflow: hidden;
-       transform: translateY(-100px); /* Moves the graph up by 100px */
+        margin-top: -100px; /* Raises the graph by 100px */
     }
 
     .toggle-physics-button {
