--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       border: 1px solid #333;
       border-radius: 8px;
       overflow: hidden;
-      margin-top: -200px; /* Raises the graph by 100px */
+        margin-top: -200px;
     }
 
     .toggle-physics-button {
@@ -56,18 +56,6 @@
     .toggle-physics-button:active {
       transform: translateY(1px);
     }
-
-    #nextmind-sync-feedback {
-      position: absolute;
-      top: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      padding: 10px;
-      font-size: 18px;
-      color: white;
-      text-align: center;
-      visibility: hidden; /* Initially hidden until sync is confirmed */
-    }
   </style>
 </head>
 <body>
@@ -75,11 +63,10 @@
 <div id="connections-graph-container">
   <button class="toggle-physics-button">Push Button</button>
   <div id="connections-graph"></div>
-  <div id="nextmind-sync-feedback">Syncing... <span id="sync-status">Not in sync</span></div>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
-<script src="https://cdn.nextmind.com/nextmind.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/nextmind-web-sdk@latest"></script>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     const items = [
@@ -126,29 +113,18 @@
 ];
 
 
-   const nodes = new vis.DataSet([]);
+ // Vis.js Graph Setup
+    const nodes = new vis.DataSet([]);
     const edges = new vis.DataSet([]);
     const nodeConnections = {};
-
     const groups = {
-      Author: {
-        color: { background: '#7f4b94', border: '#5a2d7b' }
-      },
-      Book: {
-        color: { background: '#53a6c1', border: '#1f4e5b' }
-      },
-      Subject: {
-        color: { background: '#c0c2ff', border: '#8f90ff' }
-      },
-      Concept: {
-        color: { background: '#ffdf87', border: '#d4b142' }
-      },
-      Item: {
-        color: { background: '#5d81ff', border: '#3e5a99' }
-      }
+      Author: { color: { background: '#7f4b94', border: '#5a2d7b' } },
+      Book: { color: { background: '#53a6c1', border: '#1f4e5b' } },
+      Subject: { color: { background: '#c0c2ff', border: '#8f90ff' } },
+      Concept: { color: { background: '#ffdf87', border: '#d4b142' } },
+      Item: { color: { background: '#5d81ff', border: '#3e5a99' } }
     };
 
-    // Adding nodes and edges logic (same as before)
     items.forEach(item => {
       const itemNode = {
         id: item.id,
@@ -200,37 +176,19 @@
         width: 1,
         smooth: { type: 'continuous' }
       },
-      physics: {
-        enabled: false,
-        solver: 'forceAtlas2Based',
-        forceAtlas2Based: {
-          gravitationalConstant: -50,
-          centralGravity: 0.001,
-          springLength: 150,
-          springConstant: 0.08
-        },
-        stabilization: { iterations: 100 }
-      },
-      interaction: {
-        hover: true,
-        zoomView: true,
-        dragView: true,
-        dragNodes: true,
-        zoomSpeed: 0.5,
-        tooltipDelay: 300
-      },
-      groups: groups,
-      layout: { randomSeed: 2, improvedLayout: true }
+      physics: { enabled: false },
+      interaction: { hover: true, zoomView: true, dragView: true, dragNodes: true },
+      groups: groups
     };
 
     const network = new vis.Network(container, data, options);
 
+    // Apply Circular Layout
     function applyCircularLayout() {
       const positions = {};
       const nodeCount = nodes.length;
       const radius = 350;
       const angle = (2 * Math.PI) / nodeCount;
-      const yOffset = -200;
       
       let i = 0;
       nodes.forEach((node) => {
@@ -244,11 +202,7 @@
       network.setOptions({ physics: { enabled: false } });
       network.moveTo({ scale: 0.3 });
       network.body.data.nodes.update(
-        nodes.map(node => ({
-          id: node.id,
-          x: positions[node.id].x,
-          y: positions[node.id].y
-        }))
+        nodes.map(node => ({ id: node.id, x: positions[node.id].x, y: positions[node.id].y }))
       );
     }
 
@@ -260,38 +214,27 @@
 
     applyCircularLayout();
 
-    const toggleButton = document.querySelector(".toggle-physics-button");
+    // NextMind Controller Integration
     let isPhysicsEnabled = false;
 
-    toggleButton.addEventListener("click", function() {
-      isPhysicsEnabled = !isPhysicsEnabled;
-      if (isPhysicsEnabled) {
-        network.setOptions({ physics: { enabled: true } });
-      } else {
-        applyCircularLayout();
-        network.setOptions({ physics: { enabled: false } });
+    function togglePhysicsWithNextMind(data) {
+      if (data) {
+        if (data.value > 0.7) { // Trigger threshold when signal value is strong enough
+          isPhysicsEnabled = !isPhysicsEnabled;
+          if (isPhysicsEnabled) {
+            network.setOptions({ physics: { enabled: true } });
+          } else {
+            applyCircularLayout();
+            network.setOptions({ physics: { enabled: false } });
+          }
+        }
       }
-    });
+    }
 
-    // NextMind integration for Sync Feedback
-    const syncFeedbackElement = document.getElementById("nextmind-sync-feedback");
-    const syncStatusElement = document.getElementById("sync-status");
-
-    NextMind.on('signal', function(signal) {
-      if (signal.type === 'syncing') {
-        syncFeedbackElement.style.visibility = 'visible';
-        syncStatusElement.textContent = 'Syncing...';
-      } else if (signal.type === 'sync') {
-        syncStatusElement.textContent = 'In Sync';
-        syncFeedbackElement.style.backgroundColor = 'green'; // Glowing green when in sync
-      } else if (signal.type === 'out_of_sync') {
-        syncStatusElement.textContent = 'Out of Sync';
-        syncFeedbackElement.style.backgroundColor = 'red'; // Glowing red when out of sync
-      }
-    });
-
-    // Start NextMind controller
-    NextMind.start();
+    // Start the NextMind SDK and listen for signals
+    NextMind.start().then(() => {
+      NextMind.on('signal', togglePhysicsWithNextMind);
+    }).catch(console.error);
   });
 </script>
 
